@@ -19,7 +19,6 @@ curl -sL https://raw.githubusercontent.com/MelonSmasher/NginxInstaller/master/ng
 * -v `Compile with VTS module` [more info](https://github.com/vozlt/nginx-module-vts)
 * -a `Compile with ALPN support` - (Need this for HTTP2/SPDY)
 * -g `Compile with GEO IP module`
-* -p `Compile with PageSpeed module` [more info](https://developers.google.com/speed/pagespeed/)
 * -c `Compile with CachePurge module` [more info](https://github.com/nginx-modules/ngx_cache_purge)
 * -l `Compile with LDAP auth module` [more info](https://github.com/kvspb/nginx-auth-ldap)
 * -f `Force the installation even if the correct version is installed.`
